JDK17 Syntax Upgrade